# rapid-earthquake-dynamics

./: .flake8  .gitmodules  .pre-commit-config.yaml  CITATION.cff  Dockerfile.easi  Dockerfile.easi.seisscoped  README.md  chunk_parameter_files_and_launch_jobs.py  model_setup.py  pyproject.toml  requirements.txt  run_full_workflow_supercomputer.sh  step1_model_setup.py  step2_NG.sh  step2_generate_dr_input_files.py  step3_generate_dr_input_files.py  step3_launch_dr_jobs.py  step4_validation.sh  step4_validation_NG.sh  step5_validation.sh
dynworflow/: generate_input_seissol_dr.py  generate_input_seissol_fl33.py  model_setup.sh
dynworkflow/: __init__.py  add_source_files_to_waveform_config.py  compare_offset.py  compile_scenario_macro_properties.py  compute_fracture_energy_ensemble.py  compute_gof_fault_slip.py  compute_percentage_supershear.py  compute_simulation_batch_size.py  estimate_nucleation_radius.py  generate_input_seissol_dr.py  generate_input_seissol_fl33.py  generate_mesh.py  generate_velocity_model_files_slipnear.py  generate_waveform_config_from_usgs.py  get_repo_info.py  get_usgs_finite_fault_data.py  get_walltime_and_ranks_aggregated_job.py  infer_fault_mesh_size_and_spatial_zoom.py  kinematic_models  modify_FL33_34_fault_instantaneous_slip.py  plot_combined_gof_histogram.py  prepare_velocity_model_files.py  step1_args.py  vizualizeBoundaryConditions.py
kinematic_models/: README.md  compute_moment_rate_from_finite_fault_file.py  fault_plane.py  generate_FL33_input_files.py  generate_fault_output_from_fl33_input_files.py  multi_fault_plane.py  stf.py  (+3 more)
(+123 files in other folders)
